提交JVM案例代码